fix bug with overflow when resize term (#12)
* fix bug with overflow when resize term

Now it just hides overflowed characters.
This is default xtermjs behaviour (it just stops to render overflowed)
Css overflow: scroll for smoother experience

* rm unused listener remove

* debounce

* rm xterm css in termview

* use start with

--- a/src/view/MainView/DashboardView/ProjectView/TerminalView/style.css
+++ b/src/view/MainView/DashboardView/ProjectView/TerminalView/style.css
@@ -1,10 +1,24 @@
+.build-log {
+    height: 90%;
+    margin: 15px;
+    padding: 15px;
+    background-color: #393939;
+}
+
+.build-log__container {
+    height: 100%;
+    overflow-y: scroll;
+}
+
 .terminal {
     background-color: #393939 !important;
     color: #b5c4d0 !important;
     font-size: 14px !important;
     font-family: monospace !important;
+    line-height: 20px;
 
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .xterm-viewport {
